--- a/01-intro/Homework.ipynb
+++ b/01-intro/Homework.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "05933fb4",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "162ed159",
    "metadata": {},
    "outputs": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "04316bec",
    "metadata": {},
    "outputs": [
@@ -51,11 +51,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Collecting pyarrow\n",
-      "  Downloading pyarrow-18.0.0-cp39-cp39-manylinux_2_28_x86_64.whl (40.0 MB)\n",
-      "\u001b[K     |████████████████████████████████| 40.0 MB 144 kB/s eta 0:00:01\n",
-      "\u001b[?25hInstalling collected packages: pyarrow\n",
-      "Successfully installed pyarrow-18.0.0\n"
+      "Requirement already satisfied: pyarrow in /home/codespace/anaconda3/lib/python3.9/site-packages (18.0.0)\r\n"
      ]
     }
    ],
@@ -65,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "71ebe452",
    "metadata": {},
    "outputs": [
@@ -256,7 +252,7 @@
        "4                    1.0         16.10                   2.5          0.0  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -267,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "36ccfb97",
    "metadata": {},
    "outputs": [
@@ -310,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "7e675d3e",
    "metadata": {},
    "outputs": [],
@@ -320,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "9a0f2e89",
    "metadata": {},
    "outputs": [
@@ -330,7 +326,7 @@
        "'1.0.2'"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
